Sun Nov 05 05:22:45 2000  George Lebl <jirka@5z.com>

	* gnome-run.c: warning fixes

	* session.c, panel_config_global.h, basep-widget.c, foobar-widget.c,
	  gnome-panel-properties.c:  Imlement a normal layer panel setting.
	  this will be the future default as it seems that almost everybody
	  hates both always on top and always on bottom settings.

Sat Nov 04 22:59:52 2000  George Lebl <jirka@5z.com>

	* gnome-run.c, foobar-widget.[ch]:  minor cleanup and some evilness

Thu Nov 02 22:19:18 2000  George Lebl <jirka@5z.com>

	* session.c: only check for /proc/apm on linux.  Also read the
	  thing and see if the percentage is >= 0, otherwise it's -1
	  and that means there is no battery.  So don't add the battery
	  applet by default in that case.

Thu Nov 02 21:27:28 2000  George Lebl <jirka@5z.com>

	* extern.c, panel.gnorba: Implement the Panel2 interface.

	* applet.c, panel-widget.c, panel.c: minor cosmetic cleanup

	* Makefile.am, gnome-panel-add-launcher.c:  Add a proggie to add
	  launchers externally.  Let's not doc this so that that many
	  people don't use it as it could become annoying, but major apps
	  may want to use it to optionally add their launcher to the panel.
	  note here, it should be OPTIONAL! in the installer, otherwise I'm
	  going to go after each and every dumbass who made it install an
	  icon without asking the user with a chainsaw.  If it becomes a
	  bother I'll stick in a confirmation dialog in these funcs.

2000-11-02  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-panel-properties.desktop: Added "no" translation.
	
Thu Nov 02 02:37:27 2000  George Lebl <jirka@5z.com>

	* panel.c, launcher.c:  move the drag status call during motion below
	  the is_drag_ok to avoid some "race" like problems, suggested by
	  Eric BRAYEUR <eb@ibelgique.com>

Tue Oct 17 18:40:38 2000  George Lebl <jirka@5z.com>

	* menu.c: Fix cast to BaseP for FooBar on panel removal

Tue Oct 17 18:15:10 2000  George Lebl <jirka@5z.com>
