@@ -1,3 +1,7 @@
+Mon Nov 06 02:06:57 2000  George Lebl <jirka@5z.com>
+
+	* menu.c: some cleanup, mostly cosmetic
+
 Sun Nov 05 05:22:45 2000  George Lebl <jirka@5z.com>
 
 	* gnome-run.c: warning fixes
